--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,7 @@ $base-font                : 'ubuntu', sans-serif;
 $heading-font             : $base-font;
 $caption-font             : $base-font;
 $code-font                : 'source-code-pro', monospace;
+//$code-font                 : 'Ubuntu', monospace;
 // $alt-font                 : 'volkhov', serif;
 $alt-font                 : 'ubuntu', sans-serif;
 
