--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -138,6 +138,7 @@ hr {
    Figures and Images
    ========================================================================== */
 
+
 figure {
   margin: 0;
   padding-top: 10px;
@@ -146,6 +147,8 @@ figure {
 
   img {
     margin-bottom: 10px;
+    @include rounded(10px);
+    //max-width: 200px;
   }
 
   a {
@@ -155,12 +158,14 @@ figure {
       -webkit-transition-duration: 0.25s;
       -moz-transition-duration: 0.25s;
       -o-transition-duration: 0.25s;
-      opacity: 0.7;
+      //opacity: 0.7;
+      opacity: 1.0;
 
       &:hover {
         @include transform(translateY(-5px));
         @include box-shadow(0 0 10px rgba($black, .20));
-        opacity: 1;
+        //opacity: 1;
+        opacity: 0.7;
       }
     }
   }
