--- a/slides/eaton-lab.css
+++ b/slides/eaton-lab.css
@@ -1,6 +1,6 @@
 
 @import url(https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700,400italic,700italic);
-
+/*@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400);*/
 
 .reveal a:not(.image) {
   line-height: 1.6em; }
@@ -73,7 +73,7 @@ body {
  .reveal h4,
  .reveal h5,
  .reveal h6 {
-   margin: 0 0 20px 0;
+   margin: 0 0 30px 0;
    color: #333;
    font-family: "Lato", sans-serif;
    font-weight: 300;
@@ -106,15 +106,20 @@ body {
 .citation {
 	position: fixed;
   bottom: 0px;
-  left: 10%;
+  left: 40%;
 	z-index:100;
 	font-size: 0.6em !important;
   /*text-align: center;*/
 }
 
 .title {
-	color: #5D9B84 !important;
-	font-weight: 500 !important;
+  color: #5D9B84 !important;
+  font-weight: 500 !important;
+}
+
+.subtitle {
+  color: #104547 !important;  
+  font-weight: 500 !important;
 }
 
 .italic { font-style: italic; }
