--- a/slides/eaton-lab.css
+++ b/slides/eaton-lab.css
@@ -106,19 +106,20 @@ body {
 .citation {
 	position: fixed;
   bottom: 0px;
-  left: 40%;
+  /*left: 42%;*/
 	z-index:100;
-	font-size: 0.6em !important;
-  /*text-align: center;*/
+	font-size: 0.5em !important;
+  text-align: center;
 }
 
 .title {
-  color: #5D9B84 !important;
+  color: #5D9B84 ;
+  /*!important;*/
   font-weight: 500 !important;
 }
 
 .subtitle {
-  color: #104547 !important;  
+  /*color: #104547 !important;  */
   font-weight: 500 !important;
 }
 
@@ -320,22 +321,3 @@ background: #264c66; }
 border-bottom: none; }
 
 
-/**************************************************************
-* IMAGE GRID LAYOUT
-***************************************************************/
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-/* Create two equal columns that sits next to each other */
-.column {
-  flex: 50%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-}
