--- a/slides/eaton-lab.css
+++ b/slides/eaton-lab.css
@@ -32,9 +32,11 @@ body {
   width: 90%;
   margin: 20px auto;
   text-align: left;
-  font-size: 0.55em;
+  font-size: 15px;  
+  /*font-size: 0.55em;*/
   font-family: monospace;
-  line-height: 1.2em; 
+  line-height: 1.45;   
+  /*line-height: 1.2em; */
   word-wrap: break-word;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); }
 
