--- a/slides/eaton-lab.css
+++ b/slides/eaton-lab.css
@@ -30,10 +30,11 @@ body {
 .reveal pre {
   display: block;
   position: relative;
-  width: 90%;
+  width: 80%;
   margin: 20px auto;
   text-align: left;
-  font-size: 15px;  
+  font-size: 0.75em;    
+  /*font-size: 15px;  */
   /*font-size: 0.55em;*/
   font-family: monospace;
   line-height: 1.45;   
@@ -49,7 +50,7 @@ body {
   display: block;
   padding: 10px 20px ;
   overflow: auto;
-  max-height: 350px;
+  max-height: 500px;
   word-wrap: normal; 
 }
 
