--- a/slides/eaton-lab.css
+++ b/slides/eaton-lab.css
@@ -13,6 +13,10 @@ body {
 }
 
 
+.dimbg .slide-background {
+  opacity: 0.55 !important;
+}
+
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 34px;
